trunk/Archive2/bd/8775eac0f6d1b7/output
main.cpp: In function 'int main()':
main.cpp:10:12: error: 'numeric_limits' was not declared in this scope
     x[i] = numeric_limits<double>::max();
            ^
main.cpp:10:12: note: suggested alternative:
In file included from main.cpp:2:0:
/usr/local/include/c++/4.9.0/limits:304:12: note:   'std::numeric_limits'
     struct numeric_limits : public __numeric_limits_base
            ^
main.cpp:10:27: error: expected primary-expression before 'double'
     x[i] = numeric_limits<double>::max();
                           ^
main.cpp:14:3: error: 'cout' was not declared in this scope
   cout << numeric_limits<double>::min() << endl;
   ^
main.cpp:14:3: note: suggested alternative:
In file included from main.cpp:1:0:
/usr/local/include/c++/4.9.0/iostream:61:18: note:   'std::cout'
   extern ostream cout;  /// Linked to standard output
                  ^
main.cpp:14:11: error: 'numeric_limits' was not declared in this scope
   cout << numeric_limits<double>::min() << endl;
           ^
main.cpp:14:11: note: suggested alternative:
In file included from main.cpp:2:0:
/usr/local/include/c++/4.9.0/limits:304:12: note:   'std::numeric_limits'
     struct numeric_limits : public __numeric_limits_base
            ^
main.cpp:14:26: error: expected primary-expression before 'double'
   cout << numeric_limits<double>::min() << endl;
                          ^
